--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -86,7 +86,8 @@ jobs:
         
         #增加日期标签
         cat >> .config <<EOF
-        CONFIG_KERNEL_BUILD_USER="eSir on $(date)"
+        CONFIG_KERNEL_BUILD_DOMAIN="eSir on $(date)"
+        #CONFIG_KERNEL_BUILD_USER="eSir on $(date)"
         CONFIG_GRUB_TITLE="Lean OpenWrt AutoBuild by eSir on $(date)"
         EOF
         
