--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -64,6 +64,8 @@ jobs:
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         cd openwrt
         sed -i '5s/#//' feeds.conf.default
+        echo "src-git helloworld https://github.com/fw876/helloworld" >> feeds.conf.default
+
         
     - name: Update & Install feeds
       working-directory: ./openwrt
