--- a/.github/workflows/sync_with_origin.yml
+++ b/.github/workflows/sync_with_origin.yml
@@ -12,8 +12,8 @@ on:
   #push:
   #  branches: 
   #    - master
-  schedule:
-    - cron: 0 0 15 * *
+  #schedule:
+  #  - cron: 0 0 15 * *
   
   workflow_dispatch:
 
